@@ -1,3 +1,8 @@
+2010-06-29  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/TestSpacingVisitor.cs: Added tests
+	  for fixed fields/constants.
+
 2010-06-23  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharpBinding/TestSpacingVisitor.cs: Activated
